# ai-chatbot

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  biome.jsonc  components.json  docker-compose.yml  docker-entrypoint.sh  middleware.ts  migrate.js  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx
components/: a2a-server-manager.tsx  app-sidebar.tsx  artifact-close-button.tsx  artifact.tsx  attachments-button.tsx  auth-form.tsx  chat-context.tsx  chat-header.tsx  chat.tsx  console.tsx  data-stream-handler.tsx  data-stream-provider.tsx  document-preview.tsx  document.tsx  elicitation-dialog.tsx  expandable-panel.tsx  greeting.tsx  icons.tsx  image-editor.tsx  input-expandable-content.tsx  input-options.tsx  loadout-manager.tsx  loadout-selector.tsx  mcp-progress-indicator.tsx  mcp-server-data-table.tsx  mcp-server-item.tsx  mcp-server-manager.tsx  mcp-tool-container.tsx  mcp-tool-renderer.tsx  mcp-tool-result.tsx  mcp-tools-data-table.tsx  mcp-tools-table.tsx  memory-item.tsx  memory-manager.tsx  message-a2a.tsx  message-actions.tsx  message-reasoning.tsx  message.tsx  messages.tsx  model-selector-compact.tsx  (+24 more)
convex/: ai.ts  auth.ts  http.ts  mutations.ts  queries.ts  schema.ts
hooks/: use-a2a-client.ts  use-a2a-events.ts  (+17 more)
mcp-multiply/: Dockerfile  README.md  main.py  pyproject.toml
mcp-test-server/: .dockerignore  .gitignore  Dockerfile  README.md  main-enhanced.py  main.py  pyproject.toml
mcp-test-server/mcp_test_server/: main.py
(+193 files in other folders)
